fixed overflow scroll

--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -3,8 +3,6 @@
 }
 
 .html-preview {
-    display: block;
-    overflow: hidden;
     color: #333;
     line-height: 1.7;
     text-size-adjust: 100%;
