--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,4 +5,6 @@ header {
     line-height: 60px;
     border-bottom: 1px solid $border-color;
     background-color: rgba(255, 255, 255, .97);
+
+    color: gray;
 }
