--- a/src/scss/components/_html-preview.scss
+++ b/src/scss/components/_html-preview.scss
@@ -1,10 +1,10 @@
-.html-preview {
+.html-preview-container {
     flex: 1;
 
-    .html {
-        overflow-y: scroll;
+    .html-preview {
         padding: 40px 40px 0;
         height: 100%;
+        overflow-y: auto;
 
         @include custom-scrollbar();
     }
