--- a/src/scss/components/_markdown-editor.scss
+++ b/src/scss/components/_markdown-editor.scss
@@ -4,7 +4,6 @@
 
     textarea {
         display: block;
-        overflow-y: scroll;
 
         padding: 40px 40px 0;
         width: 100%;
