--- a/src/scss/mixins/_custom-scrollbar.scss
+++ b/src/scss/mixins/_custom-scrollbar.scss
@@ -12,7 +12,7 @@
     &::-webkit-scrollbar-thumb {
         height: 50px;
         background-color: rgba(0, 0, 0, .2);
-        border-radius: 4px;
+        border-radius: 6px;
         outline: 2px solid #f2f2f2;
         outline-offset: -2px;
         border: 2px solid #f2f2f2;
